Changes to fuzzer

--- a/CMakeLists.txt
+++ b/CMakeLists.txt
@@ -176,8 +176,8 @@ if (SUPPORT_MID_TIMIDITY)
 endif()
 
 if (INSTRUMENT)
-    target_compile_options(SDL2_mixer PRIVATE -fsanitize=fuzzer-no-link)
-    target_link_options(SDL2_mixer PRIVATE -fsanitize=fuzzer-no-link)
+    target_compile_options(SDL2_mixer PUBLIC -fsanitize=fuzzer-no-link)
+    target_link_options(SDL2_mixer PUBLIC -fsanitize=fuzzer-no-link)
 endif()
 
 if(BUILD_SHARED_LIBS)
@@ -210,6 +210,7 @@ target_include_directories(SDL2_mixer PUBLIC include)
 if (INSTRUMENT)
     add_subdirectory(fuzz)
 endif()
+
 if (BUILD_SHARED_LIBS)
   target_link_libraries(SDL2_mixer PRIVATE SDL2::SDL2)
 else()
